--- a/src/app/edit-student/edit-student.component.html
+++ b/src/app/edit-student/edit-student.component.html
@@ -1,8 +1,8 @@
 <form [formGroup]="updateForm" (ngSubmit)="save()">
   <input type="hidden" formControlName="id">
   <input type="text" formControlName="name">
-  <input type="number" formControlName="description">
-  <input type="number" formControlName="action">
+  <input type="text" formControlName="description">
+  <input type="text" formControlName="action">
   <button type="submit">Update</button>
 </form>
 
