--- a/src/app/list-student/list-student.component.html
+++ b/src/app/list-student/list-student.component.html
@@ -12,13 +12,11 @@
   <tbody>
   <tr *ngFor="let item of listStudent">
     <td>{{item.id}}</td>
-    <td>{{item.name}}</td>
+    <td><a [routerLink]="['detail/',item.id]" >{{item.name}}</a></td>
     <td>{{item.description}}</td>
     <td>{{item.action}}</td>
-
-    <td><button [routerLink]="['edit', item.id]" >Edit</button>
-      <button  (click)="deleteStudent(item.id)">Delete</button></td>
-
+    <td><button [routerLink]="['/edit', item.id]" >Edit</button></td>
+    <td><button  (click)="deleteStudent(item.id)">Delete</button></td>
   </tr>
 
   </tbody>
